--- a/visualization/nl/index.html
+++ b/visualization/nl/index.html
@@ -1,7 +1,7 @@
-<h1 id="nl-median-rtt-using-1000-probes-atlas-probes">.nl median RTT using ~1000 probes Atlas probes</h1>
+<h1 id="nl-median-rtt-using-10000-probes-atlas-probes">.nl median RTT using ~10000 probes Atlas probes</h1>
 <ul>
 <li>Mesurement date: 2018-10-19</li>
-<li>Duration: 1h</li>
+<li>Duration: 1h each</li>
 <li>frequency: 10min</li>
 </ul>
 <h2 id="servers-ipv4-only">Servers (IPv4 only)</h2>
