--- a/visualization/nl/index.html
+++ b/visualization/nl/index.html
@@ -12,3 +12,7 @@
 <li><a href="isc-16557773-1539907200-1539993599.html">sns-pb.isc.org</a></li>
 <li><a href="d-nic-fr-16557083-1539907200-1539993599.html">d.nic.fr</a></li>
 </ul>
+<h1 id="newer-measurements-same-servers-2018-12-13">Newer measurements (same servers) 2018-12-13</h1>
+<ul>
+<li><a href="20181213">See 20181213</a></li>
+</ul>
