--- a/visualization/nl/index.html
+++ b/visualization/nl/index.html
@@ -14,5 +14,5 @@
 </ul>
 <h1 id="newer-measurements-same-servers-2018-12-13">Newer measurements (same servers) 2018-12-13</h1>
 <ul>
-<li><a href="20181213">See 20181213</a></li>
+<li><a href="20181213/ns1-18119258-1544659200-1544745599.html">ns1.dns.nl</a></li>
 </ul>
