new measurements added

--- a/visualization/nl/20181213/index.html
+++ b/visualization/nl/20181213/index.html
@@ -4,12 +4,14 @@
 <li>Duration: 1h each</li>
 <li>frequency: 10min</li>
 </ul>
-<h2 id="servers-ipv4-only">Servers (IPv4 only)</h2>
+<h2 id="servers">Servers</h2>
 <ul>
-<li><a href="ns1-18119258-1544659200-1544745599.html">ns1.dns.nl</a> <!---
-  * [ns2.dns.nl](ns2-16557740-1539907200-1539993599.html)
-  * [ns3.dns.nl](ns3-16557770-1539907200-1539993599.html)
-  * [sns-pb.isc.org](isc-16557773-1539907200-1539993599.html)
-  * [d.nic.fr](d-nic-fr-16557083-1539907200-1539993599.html)
---></li>
+<li><a href="ns1-ipv4-18119258-1544659200-1544745599.html">ns1.dns.nl -- IPv4</a></li>
+<li><a href="ns1-ipv6-18119260-1544659200-1544745599.html">ns1.dns.nl -- IPv6</a></li>
+<li><a href="ns2-ipv4-18119344-1544659200-1544745599.html">ns2.dns.nl -- IPv4</a></li>
+<li><a href="ns2-ipv6-18119460-1544659200-1544745599.html">ns2.dns.nl -- IPv6</a></li>
+<li>ns3.dns.nl -- IPv4 (failed measurement, did not start on ripe)</li>
+<li><a href="ns3-ipv6-18119473-1544659200-1544745599.html">ns3.dns.nl -- IPv6</a></li>
+<li>sns-pb.isc.org -- IPv4 (misconfiguration, wrong setup)</li>
+<li><a href="ns3-ipv6-18119473-1544659200-1544745599.html">sns-pb.isc.org -- IPv6</a></li>
 </ul>
