--- a/visualization/nl/index.html
+++ b/visualization/nl/index.html
@@ -14,5 +14,12 @@
 </ul>
 <h1 id="newer-measurements-same-servers-2018-12-13">Newer measurements (same servers) 2018-12-13</h1>
 <ul>
-<li><a href="20181213/ns1-18119258-1544659200-1544745599.html">ns1.dns.nl</a></li>
+<li><a href="20181213/ns1-ipv4-18119258-1544659200-1544745599.html">ns1.dns.nl -- IPv4</a></li>
+<li><a href="20181213/ns1-ipv6-18119260-1544659200-1544745599.html">ns1.dns.nl -- IPv6</a></li>
+<li><a href="20181213/ns2-ipv4-18119344-1544659200-1544745599.html">ns2.dns.nl -- IPv4</a></li>
+<li><a href="20181213/ns2-ipv6-18119460-1544659200-1544745599.html">ns2.dns.nl -- IPv6</a></li>
+<li>ns3.dns.nl -- IPv4 (failed measurement, did not start on ripe)</li>
+<li><a href="20181213/ns3-ipv6-18119473-1544659200-1544745599.html">ns3.dns.nl -- IPv6</a></li>
+<li>sns-pb.isc.org -- IPv4 (misconfiguration, wrong setup)</li>
+<li><a href="ns3-ipv6-18119473-1544659200-1544745599.html">sns-pb.isc.org -- IPv6</a></li>
 </ul>
