--- a/visualization/nl/index.html
+++ b/visualization/nl/index.html
@@ -21,5 +21,5 @@
 <li><a href="20181219/ns3-ipv4-18357959-1545177600-1545263999.html">ns3.dns.nl -- IPv4 -- 20181219</a></li>
 <li><a href="20181213/ns3-ipv6-18119473-1544659200-1544745599.html">ns3.dns.nl -- IPv6</a></li>
 <li><a href="20181219/isc-ipv4-18357959-1545177600-1545263999.html">sns-pb.isc.org -- IPv4--20181219</a></li>
-<li><a href="isc-ivp6-8119543-1544659200-1544745599.html">sns-pb.isc.org -- IPv6</a></li>
+<li><a href="20181213/isc-ivp6-8119543-1544659200-1544745599.html">sns-pb.isc.org -- IPv6</a></li>
 </ul>
