--- a/visualization/nl/index.html
+++ b/visualization/nl/index.html
@@ -23,3 +23,8 @@
 <li><a href="20181219/isc-ipv4-18358062-1545177600-1545263999.html">sns-pb.isc.org -- IPv4--20181219</a></li>
 <li><a href="20181213/isc-ivp6-8119543-1544659200-1544745599.html">sns-pb.isc.org -- IPv6</a></li>
 </ul>
+<h1 id="merged-measurements-2018-12-13-2018-12-19">Merged measurements (2018-12-13 + 2018-12-19)</h1>
+<ul>
+<li><a href="merged20181219/ipv4.html">IPv4 nameservers combined</a></li>
+<li><a href="merged20181219/ipv6.html">IPv6 nameservers combined</a></li>
+</ul>
